fix display width on mobile

--- a/src/css/Switcher.css
+++ b/src/css/Switcher.css
@@ -1,5 +1,6 @@
 .switcher {
   position: relative;
+  width: 100%;
   margin: 0;
   -webkit-box-flex: 1;
   -ms-flex: 1;
